Change interface name to Var

--- a/wg0.conf
+++ b/wg0.conf
@@ -4,7 +4,7 @@ Address = required
 DNS = required
 
 PostUp = iptables -A FORWARD -i wg0 -j ACCEPT
-PostUp = iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
+PostUp = iptables -t nat -A POSTROUTING -o _nic -j MASQUERADE
 PostUp = echo 1 > /proc/sys/net/ipv4/ip_forward
 
 
