--- a/wg0.conf
+++ b/wg0.conf
@@ -12,5 +12,5 @@ PostUp = echo 1 > /proc/sys/net/ipv4/ip_forward
 PublicKey = required
 PresharedKey = required
 Endpoint = required
-AllowedIPs = 0.0.0.0/0, ::0/0
+AllowedIPs = 0.0.0.0/0
 PersistentKeepalive = 25
